--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,8 @@
 ---
+flow_database_type: h2
+flow_database_host: localhost
+flow_database_port: 5432
+flow_database_name: flow
 flow_database_user: flow
 flow_database_pass: flow
 flow_admin_pass: flow
